# airflow-provider-tm1

./: README.md  pytest.ini  setup.cfg
.github/workflows/: black.yaml  isort.yaml  tests.yaml
airflow_provider_tm1/: __init__.py
airflow_provider_tm1/hooks/: tm1.py
airflow_provider_tm1/operators/: tm1.py
airflow_provider_tm1/sensors/: tm1.py
tests/: conftest.py
tests/hooks/: test_hook.py
tests/operators/: test_operators.py
tests/sensors/: test_sensors.py
